<resources>
    <string name="app_name">AutoRed</string>
    <string name="welcome_text">Вход</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="bottom_nav_search">Поиск</string>
    <string name="bottom_nav_account">Аккаунт</string>
    <string name="bottom_nav_history">История</string>
    <string name="welcome_text_register">Регистрация</string>
    <string name="register_continue">Далее</string>
    <string name="fio">Фио</string>
    <string name="phone">Телефон</string>
    <string name="birthdate">Дата рождения</string>
    <string name="profile_description">Описание профиля</string>
    <string name="passport_number">Номер паспорта</string>
    <string name="driver_license_number">Номер вод.удостоверения</string>
    <string name="photo_passport">Фотография паспорта</string>
    <string name="driver_license_photo">Фотография вод. удостоверения</string>
    <string name="register_request_header">Ваша заявка находится на рассмотрении</string>
    <string name="register_request_body">Подтверждение данных может занять до 1 часа  от момента регистрации</string>
    <string name="avatar">Фотография профиля</string>
    <string name="car_photo">Фотография автомобиля</string>
    <string name="star">Star</string>
    <string name="apply">Применить</string>
    <string name="filters">Фильтры</string>
    <string name="back">Назад</string>
    <string name="body_type">Тип кузова</string>
    <string name="fuel_type">Тип топлива</string>
    <string name="transmission_type">Тип трансмиссии</string>
    <string name="doors">Дверей</string>
    <string name="seats">Мест</string>
    <string name="color">Цвет</string>
    <string name="book">Забронировать</string>
    <string name="day">Сутки</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="text_price">BYN %1$.1f</string>
    <string name="text_car_make_model_year">%1s %2s %3s</string>
    <string name="feature">feature</string>
    <string name="my_account">Мой аккаунт</string>
    <string name="settings">Настройки</string>
    <string name="add_advertisement">Добавить объявление</string>
    <string name="my_advertisements">Мои объявления</string>
    <string name="new_password">Новый пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="text_support_message">Сообщение в службу технической поддержки</string>
    <string name="send">Отправить</string>
    <string name="save">Сохранить</string>
    <string name="advertisement_creating">Публикация объявления</string>
    <string name="vin">VIN-номер</string>
    <string name="license_plate">Гос. номер</string>
    <string name="make">Марка</string>
    <string name="model">Модель</string>
    <string name="conditioner">Кондиционер</string>
    <string name="all_wheel_drive">Полный привод</string>
    <string name="leather_seats">Кожаный салон</string>
    <string name="child_seats">Детское кресло</string>
    <string name="heated_seats">Подогрев сидений</string>
    <string name="cooled_seats">Вентиляция сидений</string>
    <string name="gps">Навигация</string>
    <string name="ski_rack">Лючок для лыж</string>
    <string name="audio_input">Аудио-вход</string>
    <string name="usb_input">USB-вход</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="android_auto">Android Auto</string>
    <string name="apple_carplay">Apple Carplay</string>
    <string name="sun_roof">Люк/Панорамная крыша</string>
    <string name="mfd_year">Год выпуска</string>
    <string name="create">Создать</string>
    <string name="clear">Очистить</string>
    <string name="text_price_per_day">Стоимость в сутки</string>
    <string name="text_price_per_week">Стоимость в неделю</string>
    <string name="text_price_per_month">Стоимость в месяц</string>
    <string name="longitude">Долгота</string>
    <string name="latitude">Широта</string>
    <string name="location">Город</string>
    <string name="add_photos">Добавить фотографии</string>
    <string name="minus">-</string>
    <string name="start_ride">Начать поездку</string>
    <string name="sign_act">Подписать акт приема-передачи</string>
    <string name="link_payment">Ссылка на оплату</string>
    <string name="link_chat">Ссылка на чат</string>
    <string name="ride_details">Детали поездки</string>
    <string name="status">Статус:</string>
    <string name="post_review">Оставить отзыв</string>
    <string name="payment_successful">Оплата прошла успешно</string>
    <string name="payment">Оплата</string>
    <string name="review">Отзыв</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="review_on_lessee">Отзыв на арендатора</string>
    <string name="review_on_car">Отзыв на автомобиль</string>
    <string name="end_ride">Закончить поездку</string>
    <string name="review_on_lessor">Отзыв на арендодателя</string>
    <string name="cancel">Отменить</string>
    <string name="rides_qty">%1$d поездок</string>
    <string name="day_price">BYN %1$.f/сутки</string>
    <string name="start_date">Дата начала</string>
    <string name="end_date">Дата окончания</string>
    <string name="text_book">Забронировать</string>
    <string name="text_minus">---</string>
    <string name="text_advertisement">Объявление</string>
    <string name="text_rides_by_advertisement">Поездки по объявлению</string>
    <string name="text_forward">Перейти</string>
    <string name="text_created">Создана</string>
    <string name="text_payment">Ссылка на оплату</string>
    <string name="text_dialog_book">Перед подписанием акта необходимо произвести фотоконтроль автомобиля. Нажав на кнопку \"Добавить\", откроется камера. После создания снимка камера закроется. Для добавления еще одной фотографии повторите предыдущее действие.\n\nНажав кнопку \"Подписать\", вы соглааетесь с условиями сервиса.</string>
    <string name="add">Добавить</string>
    <string name="text_sign">Подписать</string>
    <string name="text_check_payment">Проверить оплату</string>
    <string name="text_total_cost">Стоимость</string>
</resources>