<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_800">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/post_review"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/button_back"
        app:layout_constraintLeft_toRightOf="@id/button_back"
        app:layout_constraintTop_toTopOf="@id/button_back" />

    <LinearLayout
        android:id="@+id/layout_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_header">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_review"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:errorEnabled="true"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/review"
                android:inputType="textMultiLine"
                android:lines="10"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/checkbox_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/bordo_900"
                android:text="@string/_5"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/checkbox_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/bordo_900"
                android:text="@string/_4"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/checkbox_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/bordo_900"
                android:text="@string/_3"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/checkbox_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/bordo_900"
                android:text="@string/_2"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/checkbox_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/bordo_900"
                android:text="@string/_1"
                android:textColor="@color/white" />
        </RadioGroup>

        <Button
            android:id="@+id/button_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/round_rectangle"
            android:text="@string/send" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>