<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_ride_details_lessor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_800"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_ride"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/ride_details"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/button_back"
            app:layout_constraintLeft_toRightOf="@id/button_back"
            app:layout_constraintTop_toTopOf="@id/button_back" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photo_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/button_back"
            tools:itemCount="5"
            tools:listitem="@layout/item_image" />

        <TextView
            android:id="@+id/car_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:padding="8dp"
            android:text="@string/text_car_make_model_year"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/photo_recycler_view" />

        <TableRow
            android:id="@+id/row_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/car_name">

            <TextView
                android:id="@+id/text_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                tools:text="5.0"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/image_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/star"
                android:paddingBottom="8dp"
                android:src="@drawable/ic_baseline_star_rate_24"
                app:tint="@color/bordo_800" />

            <TextView
                android:id="@+id/text_rides_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:text="@string/rides_qty"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/row_rate">

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:text="@string/status"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:text="Поездка завершена"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </TableRow>

        <TextView
            android:id="@+id/text_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_review"
            android:textAlignment="center"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/row_status" />

        <TableLayout
            android:id="@+id/price_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:stretchColumns="1"
            app:layout_constraintTop_toBottomOf="@id/text_review">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/day"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_price_per_day"
                    android:gravity="end"
                    android:text="@string/text_price"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/week"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_price_per_week"
                    android:gravity="end"
                    android:text="@string/text_price"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/month"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_price_per_month"
                    android:gravity="end"
                    android:text="@string/text_price"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/description_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:stretchColumns="1"
            app:layout_constraintTop_toBottomOf="@id/price_table">

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/link_chat"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_link_chat"
                    android:gravity="end"
                    android:padding="3dip"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="Седан" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/link_payment"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_link_payment"
                    android:gravity="end"
                    android:padding="3dip"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="Седан" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/button_sign_act"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="75dp"
            android:layout_marginVertical="32dp"
            android:background="@drawable/round_rectangle"
            android:text="@string/sign_act"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_table" />

        <Button
            android:id="@+id/button_end_ride"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="75dp"
            android:layout_marginVertical="32dp"

            android:textSize="14sp"
            android:background="@drawable/round_rectangle"
            android:text="@string/end_ride"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_table" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>